For participation, updated radio buttons with prices.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,7 @@
             android:layout_weight="1" />
 
         <RadioButton
-            android:text="@string/mediumpizza"
+            android:text="@string/medium_pizza"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/radioButtonMedium"
